[package]
name = "repugnant-pickle"
version = "0.0.1"
edition = "2021"
resolver = "2"
license = "Apache-2.0"
description = "Low effort scraping for Python pickle format files, including some support for loading PyTorch checkpoints"
keywords = [ "python", "pickle", "serialization", "pytorch", "machine-learning" ]
repository = "https://github.com/KerfuffleV2"

[features]
default = []
torch = ["zip"]

[dependencies]
anyhow = "1"
nom = "7.1"
once_cell ="1"
num-bigint = "0.4"
zip = { version = "0.6", optional = true }
